force-app/main/default/objects/CampaignMember/fields/Campaign_Influence_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Influence_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Influence</label>
    <referenceTo>Campaign_Influence__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>