force-app/main/default/objects/CampaignMember/fields/CM_Type__c.field-meta.xml
<CustomField>
    <fullName>CM_Type__c</fullName>
    <formula>if(ContactId=null,LeadId,ContactId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CM Type</label>
    <type>Text</type>
</CustomField>