force-app/main/default/objects/CampaignMember/fields/Five9LSP__Five9_List_ID__c.field-meta.xml
<CustomField>
    <fullName>Five9LSP__Five9_List_ID__c</fullName>
    <label>Five9 List ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>